--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://makht.github.io/project-soch-website"
+  "homepage": "https://projectsoch.eu"
 }
